--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     },
     "homepage": "https://github.com/mread1208/six-handed-euchre#readme",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
