--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     },
     "homepage": "https://github.com/mread1208/six-handed-euchre#readme",
     "dependencies": {
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
+        "morgan": "^1.10.0",
+        "pg": "^8.0.0",
+        "sequelize": "^5.21.6",
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
