--- a/package.json
+++ b/package.json
@@ -1,28 +1,62 @@
 {
     "name": "six-handed-euchre",
-    "version": "1.0.0",
+    "version": "0.0.0",
     "description": "A web application for playing six-handed euchre",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
-    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/mread1208/six-handed-euchre.git"
     },
     "author": "Michael Read",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/mread1208/six-handed-euchre/issues"
     },
     "homepage": "https://github.com/mread1208/six-handed-euchre#readme",
+    "scripts": {
+        "ng": "ng",
+        "nx": "nx",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "nx workspace-lint && ng lint",
+        "eslint": "eslint .",
+        "eslint:fix": "eslint . --fix",
+        "e2e": "ng e2e",
+        "affected:apps": "nx affected:apps",
+        "affected:libs": "nx affected:libs",
+        "affected:build": "nx affected:build",
+        "affected:e2e": "nx affected:e2e",
+        "affected:test": "nx affected:test",
+        "affected:lint": "nx affected:lint",
+        "affected:dep-graph": "nx affected:dep-graph",
+        "affected": "nx affected",
+        "format": "nx format:write",
+        "format:write": "nx format:write",
+        "format:check": "nx format:check",
+        "update": "ng update @nrwl/workspace",
+        "workspace-schematic": "nx workspace-schematic",
+        "dep-graph": "nx dep-graph",
+        "help": "nx help",
+        "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    },
+    "private": true,
     "dependencies": {
+        "@nrwl/angular": "9.2.2",
+        "@angular/animations": "^9.1.0",
+        "@angular/common": "^9.1.0",
+        "@angular/compiler": "^9.1.0",
+        "@angular/core": "^9.1.0",
+        "@angular/forms": "^9.1.0",
+        "@angular/platform-browser": "^9.1.0",
+        "@angular/platform-browser-dynamic": "^9.1.0",
+        "@angular/router": "^9.1.0",
+        "core-js": "^2.5.4",
+        "rxjs": "~6.5.4",
+        "zone.js": "^0.10.2",
+        "express": "4.17.1",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
-        "express": "^4.17.1",
         "express-session": "^1.17.0",
         "morgan": "^1.10.0",
         "pg": "^8.0.0",
@@ -30,17 +64,28 @@
         "socket.io": "^2.3.0"
     },
     "devDependencies": {
-        "babel-eslint": "^9.0.0",
-        "eslint": "^5.16.0",
-        "eslint-config-airbnb": "^17.1.1",
-        "eslint-config-prettier": "^4.3.0",
-        "eslint-config-wesbos": "0.0.19",
-        "eslint-plugin-html": "^5.0.5",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.2",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^1.7.0",
-        "prettier": "^1.19.1"
+        "@angular-devkit/build-angular": "0.901.0",
+        "@angular/cli": "9.1.0",
+        "@angular/compiler-cli": "^9.1.0",
+        "@angular/language-service": "^9.1.0",
+        "@nrwl/cypress": "9.2.2",
+        "@nrwl/express": "9.2.2",
+        "@nrwl/jest": "9.2.2",
+        "@nrwl/workspace": "9.2.2",
+        "@types/jest": "25.1.4",
+        "@types/node": "~8.9.4",
+        "codelyzer": "~5.0.1",
+        "cypress": "^4.1.0",
+        "dotenv": "6.2.0",
+        "eslint": "6.8.0",
+        "jest": "25.2.3",
+        "jest-preset-angular": "8.1.2",
+        "prettier": "1.19.1",
+        "ts-jest": "25.2.1",
+        "ts-node": "~7.0.0",
+        "tslint": "~6.0.0",
+        "typescript": "~3.8.3",
+        "@nrwl/node": "9.2.2",
+        "@types/express": "4.17.0"
     }
 }
