--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     },
     "private": true,
     "dependencies": {
-        "@nrwl/angular": "9.2.2",
         "@angular/animations": "^9.1.0",
         "@angular/common": "^9.1.0",
         "@angular/compiler": "^9.1.0",
@@ -50,18 +49,20 @@
         "@angular/platform-browser": "^9.1.0",
         "@angular/platform-browser-dynamic": "^9.1.0",
         "@angular/router": "^9.1.0",
-        "core-js": "^2.5.4",
-        "rxjs": "~6.5.4",
-        "zone.js": "^0.10.2",
-        "express": "4.17.1",
+        "@nrwl/angular": "9.2.2",
+        "@types/express-session": "^1.17.0",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
+        "core-js": "^2.5.4",
+        "express": "4.17.1",
         "express-session": "^1.17.0",
         "morgan": "^1.10.0",
         "pg": "^8.0.0",
+        "rxjs": "~6.5.4",
         "sequelize": "^5.21.6",
-        "socket.io": "^2.3.0"
+        "socket.io": "^2.3.0",
+        "zone.js": "^0.10.2"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.901.0",
