--- a/package.json
+++ b/package.json
@@ -51,16 +51,17 @@
         "@angular/router": "^9.1.0",
         "@nrwl/angular": "9.2.2",
         "@types/express-session": "^1.17.0",
-        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
-        "cookie-parser": "^1.4.5",
+        "jsonwebtoken": "^8.5.1",
+        "moment": "^2.24.0",
+        "moment-timezone": "^0.5.27",
+        "mongoose": "^5.7.9",
+        "uuid": "^3.3.3",
+        "swagger-ui-express": "^4.1.2",
+        "sync-request": "^6.1.0",
         "core-js": "^2.5.4",
         "express": "4.17.1",
-        "express-session": "^1.17.0",
-        "morgan": "^1.10.0",
-        "pg": "^8.0.0",
         "rxjs": "~6.5.4",
-        "sequelize": "^5.21.6",
         "socket.io": "^2.3.0",
         "zone.js": "^0.10.2"
     },
