--- a/package.json
+++ b/package.json
@@ -50,19 +50,20 @@
         "@angular/platform-browser-dynamic": "^9.1.0",
         "@angular/router": "^9.1.0",
         "@nrwl/angular": "9.2.2",
-        "@types/express-session": "^1.17.0",
+        "@types/socket.io": "^2.1.4",
         "body-parser": "^1.19.0",
+        "core-js": "^2.5.4",
+        "express": "4.17.1",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.24.0",
         "moment-timezone": "^0.5.27",
         "mongoose": "^5.7.9",
-        "uuid": "^3.3.3",
-        "swagger-ui-express": "^4.1.2",
-        "sync-request": "^6.1.0",
-        "core-js": "^2.5.4",
-        "express": "4.17.1",
         "rxjs": "~6.5.4",
         "socket.io": "^2.3.0",
+        "socket.io-client": "^2.3.0",
+        "swagger-ui-express": "^4.1.2",
+        "sync-request": "^6.1.0",
+        "uuid": "^3.3.3",
         "zone.js": "^0.10.2"
     },
     "devDependencies": {
