--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
                         "aot": true,
                         "assets": [
                             "apps/six-handed-ng/src/favicon.ico",
-                            "apps/six-handed-ng/src/assets",
+                            {
+                                "glob": "**/*",
+                                "input": "apps/six-handed-ng/src/assets",
+                                "output": "assets"
+                            },
                             {
                                 "glob": "**/*.svg",
                                 "input": "node_modules/ionicons/dist/ionicons/svg",
@@ -31,36 +35,11 @@
                             }
                         ],
                         "styles": [
-                            "apps/six-handed-ng/src/scss/styles.scss",
-                            {
-                                "input": "node_modules/@ionic/angular/css/normalize.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/structure.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/typography.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/core.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/padding.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/float-elements.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/text-alignment.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/text-transformation.css"
-                            },
-                            {
-                                "input": "node_modules/@ionic/angular/css/flex-utils.css"
-                            },
                             {
                                 "input": "apps/six-handed-ng/src/theme/variables.scss"
+                            },
+                            {
+                                "input": "apps/six-handed-ng/src/global.scss"
                             }
                         ],
                         "scripts": []
