--- a/package.json
+++ b/package.json
@@ -52,13 +52,15 @@
     "@ionic/angular": "^5.0.7",
     "@nrwl/angular": "9.2.2",
     "@types/socket.io": "^2.1.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
-    "express": "4.17.1",
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
-    "mongoose": "^5.7.9",
+    "mongoose": "^5.11.17",
     "rxjs": "~6.5.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
@@ -72,11 +74,15 @@
     "@angular/cli": "9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
+    "@ionic/angular-toolkit": "latest",
     "@nrwl/cypress": "9.2.2",
     "@nrwl/express": "9.2.2",
     "@nrwl/jest": "9.2.2",
+    "@nrwl/node": "9.2.2",
     "@nrwl/workspace": "9.2.2",
+    "@types/express": "4.17.0",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
@@ -88,9 +94,6 @@
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3",
-    "@nrwl/node": "9.2.2",
-    "@types/express": "4.17.0",
-    "@ionic/angular-toolkit": "latest"
+    "typescript": "~3.8.3"
   }
 }
