--- a/angular.json
+++ b/angular.json
@@ -173,7 +173,7 @@
                     "builder": "@nrwl/node:build",
                     "options": {
                         "outputPath": "dist/apps/api",
-                        "main": "apps/api/src/main.ts",
+                        "main": "apps/api/src/server.ts",
                         "tsConfig": "apps/api/tsconfig.app.json",
                         "assets": ["apps/api/src/assets"]
                     },
