--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,5 +3,6 @@
     "compilerOptions": {
         "types": ["node", "jest", "express"]
     },
-    "include": ["**/*.ts"]
+    "include": ["**/*.ts"],
+    "experimentalDecorators": true
 }
