--- a/package.json
+++ b/package.json
@@ -41,60 +41,62 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^9.1.0",
-        "@angular/common": "^9.1.0",
-        "@angular/compiler": "^9.1.0",
-        "@angular/core": "^9.1.0",
-        "@angular/forms": "^9.1.0",
-        "@angular/platform-browser": "^9.1.0",
-        "@angular/platform-browser-dynamic": "^9.1.0",
-        "@angular/router": "^9.1.0",
-        "@ionic/angular": "^5.0.7",
-        "@nrwl/angular": "9.2.2",
-        "@types/socket.io": "^2.1.4",
+        "@angular/animations": "^11.2.1",
+        "@angular/common": "^11.2.1",
+        "@angular/compiler": "^11.2.1",
+        "@angular/core": "^11.2.1",
+        "@angular/forms": "^11.2.1",
+        "@angular/platform-browser": "^11.2.1",
+        "@angular/platform-browser-dynamic": "^11.2.1",
+        "@angular/router": "^11.2.1",
+        "@ionic/angular": "^5.5.4",
+        "@nrwl/angular": "11.3.0",
+        "@types/socket.io": "^2.1.13",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
-        "core-js": "^2.5.4",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
+        "core-js": "^3.9.0",
         "envalid": "^7.0.0",
         "express": "^4.17.1",
         "express-validator": "^6.9.2",
         "jsonwebtoken": "^8.5.1",
-        "moment": "^2.24.0",
-        "moment-timezone": "^0.5.27",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.33",
         "mongoose": "^5.11.17",
-        "rxjs": "~6.5.4",
-        "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0",
-        "swagger-ui-express": "^4.1.2",
+        "rxjs": "~6.6.3",
+        "socket.io": "^3.1.1",
+        "socket.io-client": "^3.1.1",
+        "swagger-ui-express": "^4.1.6",
         "sync-request": "^6.1.0",
-        "uuid": "^3.4.0",
-        "zone.js": "^0.10.2"
+        "uuid": "^8.3.2",
+        "zone.js": "^0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.901.0",
-        "@angular/cli": "9.1.0",
-        "@angular/compiler-cli": "^9.1.0",
-        "@angular/language-service": "^9.1.0",
+        "@angular-devkit/build-angular": "0.1102.1",
+        "@angular/cli": "11.2.1",
+        "@angular/compiler-cli": "^11.2.1",
+        "@angular/language-service": "^11.2.1",
         "@ionic/angular-toolkit": "latest",
         "@nrwl/cypress": "11.3.0",
         "@nrwl/express": "11.3.0",
         "@nrwl/jest": "11.3.0",
         "@nrwl/node": "11.3.0",
         "@nrwl/workspace": "11.3.0",
-        "@types/express": "4.17.0",
-        "@types/jest": "25.1.4",
+        "@types/express": "4.17.11",
+        "@types/jest": "26.0.20",
         "@types/mongoose": "^5.10.3",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~5.0.1",
-        "cypress": "^4.1.0",
-        "dotenv": "^6.2.0",
-        "eslint": "6.8.0",
-        "jest": "25.2.3",
-        "jest-preset-angular": "8.1.2",
-        "prettier": "1.19.1",
-        "ts-jest": "25.2.1",
-        "ts-node": "~7.0.0",
+        "@types/node": "~14.14.30",
+        "codelyzer": "~6.0.1",
+        "cypress": "^6.5.0",
+        "dotenv": "^8.2.0",
+        "eslint": "7.20.0",
+        "jest": "26.6.3",
+        "jest-preset-angular": "8.3.2",
+        "prettier": "2.2.1",
+        "ts-jest": "26.5.1",
+        "ts-node": "~9.1.1",
         "tslint": "~6.0.0",
-        "typescript": "~3.8.3"
+        "typescript": "~4.1.5"
     }
 }
