--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
         "@ionic/angular": "^5.5.4",
         "@nrwl/angular": "11.3.0",
         "@types/socket.io": "^2.1.13",
+        "bcrypt": "^5.0.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
+        "cookie-parser": "^1.4.5",
         "core-js": "^3.9.0",
         "envalid": "^7.0.0",
         "express": "^4.17.1",
@@ -83,8 +85,11 @@
         "@nrwl/jest": "11.3.0",
         "@nrwl/node": "11.3.0",
         "@nrwl/workspace": "11.3.0",
+        "@types/bcrypt": "^3.0.0",
+        "@types/cookie-parser": "^1.4.2",
         "@types/express": "4.17.11",
         "@types/jest": "26.0.20",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.10.3",
         "@types/node": "~14.14.30",
         "codelyzer": "~6.0.1",
