Updated packages, fixed deprecations.

--- a/package.json
+++ b/package.json
@@ -1,106 +1,110 @@
 {
-    "name": "six-handed-euchre",
-    "version": "0.0.0",
-    "description": "A web application for playing six-handed euchre",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/mread1208/six-handed-euchre.git"
-    },
-    "author": "Michael Read",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/mread1208/six-handed-euchre/issues"
-    },
-    "homepage": "https://github.com/mread1208/six-handed-euchre#readme",
-    "scripts": {
-        "ng": "ng",
-        "nx": "nx",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "nx workspace-lint && ng lint",
-        "eslint": "eslint .",
-        "eslint:fix": "eslint . --fix",
-        "e2e": "ng e2e",
-        "affected:apps": "nx affected:apps",
-        "affected:libs": "nx affected:libs",
-        "affected:build": "nx affected:build",
-        "affected:e2e": "nx affected:e2e",
-        "affected:test": "nx affected:test",
-        "affected:lint": "nx affected:lint",
-        "affected:dep-graph": "nx affected:dep-graph",
-        "affected": "nx affected",
-        "format": "nx format:write",
-        "format:write": "nx format:write",
-        "format:check": "nx format:check",
-        "update": "ng update @nrwl/workspace",
-        "workspace-schematic": "nx workspace-schematic",
-        "dep-graph": "nx dep-graph",
-        "help": "nx help",
-        "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^11.2.1",
-        "@angular/common": "^11.2.1",
-        "@angular/compiler": "^11.2.1",
-        "@angular/core": "^11.2.1",
-        "@angular/forms": "^11.2.1",
-        "@angular/platform-browser": "^11.2.1",
-        "@angular/platform-browser-dynamic": "^11.2.1",
-        "@angular/router": "^11.2.1",
-        "@ionic/angular": "^5.5.4",
-        "@nrwl/angular": "11.3.0",
-        "@types/socket.io": "^2.1.13",
-        "bcrypt": "^5.0.0",
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "class-transformer": "^0.4.0",
-        "class-validator": "^0.13.1",
-        "core-js": "^3.9.0",
-        "envalid": "^7.0.0",
-        "express": "^4.17.1",
-        "express-validator": "^6.9.2",
-        "jsonwebtoken": "^8.5.1",
-        "moment": "^2.29.1",
-        "moment-timezone": "^0.5.33",
-        "mongoose": "^5.11.17",
-        "rxjs": "~6.6.3",
-        "socket.io": "^3.1.1",
-        "socket.io-client": "^3.1.1",
-        "swagger-ui-express": "^4.1.6",
-        "sync-request": "^6.1.0",
-        "uuid": "^8.3.2",
-        "zone.js": "^0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "0.1102.1",
-        "@angular/cli": "11.2.1",
-        "@angular/compiler-cli": "^11.2.1",
-        "@angular/language-service": "^11.2.1",
-        "@ionic/angular-toolkit": "latest",
-        "@nrwl/cypress": "11.3.0",
-        "@nrwl/express": "11.3.0",
-        "@nrwl/jest": "11.3.0",
-        "@nrwl/node": "11.3.0",
-        "@nrwl/workspace": "11.3.0",
-        "@types/bcrypt": "^3.0.0",
-        "@types/cookie-parser": "^1.4.2",
-        "@types/express": "4.17.11",
-        "@types/jest": "26.0.20",
-        "@types/jsonwebtoken": "^8.5.0",
-        "@types/mongoose": "^5.10.3",
-        "@types/node": "~14.14.30",
-        "codelyzer": "~6.0.1",
-        "cypress": "^6.5.0",
-        "dotenv": "^8.2.0",
-        "eslint": "7.20.0",
-        "jest": "26.6.3",
-        "jest-preset-angular": "8.3.2",
-        "prettier": "2.2.1",
-        "ts-jest": "26.5.1",
-        "ts-node": "~9.1.1",
-        "tslint": "~6.0.0",
-        "typescript": "~4.1.5"
-    }
+  "name": "six-handed-euchre",
+  "version": "0.0.0",
+  "description": "A web application for playing six-handed euchre",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mread1208/six-handed-euchre.git"
+  },
+  "author": "Michael Read",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mread1208/six-handed-euchre/issues"
+  },
+  "homepage": "https://github.com/mread1208/six-handed-euchre#readme",
+  "scripts": {
+    "ng": "ng",
+    "nx": "nx",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "nx workspace-lint && ng lint",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
+    "e2e": "ng e2e",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:e2e": "nx affected:e2e",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected": "nx affected",
+    "format": "nx format:write",
+    "format:write": "nx format:write",
+    "format:check": "nx format:check",
+    "update": "ng update @nrwl/workspace",
+    "workspace-schematic": "nx workspace-schematic",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^12.2.9",
+    "@angular/common": "^12.2.9",
+    "@angular/compiler": "^12.2.9",
+    "@angular/core": "^12.2.9",
+    "@angular/forms": "^12.2.9",
+    "@angular/platform-browser": "^12.2.9",
+    "@angular/platform-browser-dynamic": "^12.2.9",
+    "@angular/router": "^12.2.9",
+    "@ionic/angular": "^5.8.4",
+    "@nrwl/angular": "12.10.0",
+    "@types/socket.io": "^3.0.1",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "core-js": "^3.18.2",
+    "envalid": "^7.2.1",
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^6.0.10",
+    "rxjs": "~7.4.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
+    "swagger-ui-express": "^4.1.6",
+    "sync-request": "^6.1.0",
+    "uuid": "^8.3.2",
+    "zone.js": "^0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "12.2.9",
+    "@angular/cli": "12.2.9",
+    "@angular/compiler-cli": "^12.2.9",
+    "@angular/language-service": "^12.2.9",
+    "@ionic/angular-toolkit": "latest",
+    "@nrwl/cypress": "12.10.0",
+    "@nrwl/express": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "~16.10.3",
+    "codelyzer": "~6.0.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "cypress": "^8.6.0",
+    "dotenv": "^10.0.0",
+    "eslint": "8.0.0",
+    "jest": "27.2.5",
+    "jest-preset-angular": "10.0.1",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.5",
+    "ts-node": "~10.3.0",
+    "tslint": "~6.0.0",
+    "typescript": "~4.3.5",
+    "webpack": "^5.47.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
